TAIGA-20 Expand club statistics endpoint (#18)
* Elevate FootballClub from FootballMatchStatistics

* Add pageability to match statistics endpoint

* Add simplified statistics to competition endpoint data

* Bind MatchStatistics to CompetitionID

* Move competition creation method to CompetitionService